<resources>

    <string name="app_name" translatable="false">TextEditor</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_open">Open</string>
    <string name="action_save_as">Save as</string>
    <string name="action_clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="action_previous">Open previous file</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>


    <string name="pref_text_color">Text color</string>
    <string name="pref_back_color">Background</string>

    <string name="pref_color_green">Green</string>
    <string name="pref_color_red">Red</string>
    <string name="pref_color_black">Black</string>
    <string name="pref_color_white">White</string>
    <string name="pref_color_blue">Blue</string>
    <string name="pref_color_light_blue">Light blue</string>
    <string name="pref_color_yellow">Yellow</string>
    <string name="pref_color_gray">Gray</string>
    <string name="pref_color_magenta">Lilac</string>
    <string name="pref_color_violet">Violet</string>
    <string name="pref_color_orange">Orange</string>
    <string name="pref_color_coral">Coral</string>
    <string name="pref_color_maroon">Maroon</string>
    <string name="pref_color_moccasin">Moccasin</string>
    <string name="pref_color_pink">Pink</string>
    <string name="pref_color_navy">Navy</string>

    <string name="pref_size">Font size</string>
    <string name="pref_size_hint">(from 10 to 600)</string>

    <string name="pref_style">Font style</string>
    <string name="pref_style_regular">Default</string>
    <string name="pref_style_bold">Bold</string>
    <string name="pref_style_italic">Italic</string>
    <string name="pref_style_bold_italic">Bold and italic</string>
    <string name="italic_low_case">italic</string>

    <string name="pref_srift">Font</string>
    <string name="pref_style_monospace">Monospace</string>
    <string name="pref_style_serif">Serif</string>
    <string name="pref_style_default">Default</string>

    <string name="pref_first_litera">Auto-capitalization</string>
    <string name="pref_first_litera_summary">Capitalize the first word of each sentence</string>
    <string name="pref_numeration">Enumeration</string>
    <string name="pref_start_numeration">Numeration start</string>
    <string name="pref_start_numeration_summary">Start numeration with 0</string>
    <string name="pref_language">Language</string>
    <string name="pref_highlighting">Highlighting</string>
    <string name="pref_highlighting_summ">Highlight the current line</string>

    <string name="msg_file_saved">It`s OK, saved</string>
    <string name="msg_file_not_saved">Alas, failed</string>
    <string name="msg_file_not_opened">Hm, smth went wrong</string>
    <string name="msg_choose_file">Please, choose a file</string>
    <string name="msg_press_again">Press once again to exit</string>

    <string name="main_hint">your text goes here</string>

    <string name="button_save_text">Save</string>
    <string name="button_save_as_text">Save as</string>
    <string name="button_cancel_text">Cancel</string>
    <string name="button_open_text">Open</string>
    <string name="button_rewrite_text">Rewrite</string>
    <string name="button_create_text">Create</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="default_file_name">this file needs a name</string>
    <string name="unnamed_file">unnamed</string>

    <string name="dlg_quit_app">Do you really want to quit?</string>
    <string name="dlg_choose_file_name">So, what is the file name?</string>
    <string name="dlg_save_changes">Save changes?</string>
    <string name="dlg_positive">Yes</string>
    <string name="dlg_negative">Yesn`t</string>


</resources>
