<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_open"
        android:title="@string/action_open"
        android:icon="@drawable/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/action_save_as"
        android:title="@string/action_save_as"
        app:showAsAction="never|withText" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/undo"
        android:title="@string/action_undo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/redo"
        android:title="@string/action_redo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/clear"
        android:title="@string/action_clear"
        app:showAsAction="ifRoom" />


</menu>