<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="13"
        android:dialogTitle="Введите размер шрифта (от 10 до 32)"
        android:key="@string/pref_size"
        android:title="Размер шрифта"/>

    <ListPreference
        android:defaultValue="1"
        android:title="Стиль шрифта"
        android:key="@string/pref_style"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style" />

    <ListPreference
        android:defaultValue="1"
        android:title="Цвет шрифта"
        android:key="@string/pref_text_color"
        android:entries="@array/text_color"
        android:entryValues="@array/text_color" />

    <ListPreference
        android:defaultValue="1"
        android:title="Цвет шрифта"
        android:key="@string/pref_back_color"
        android:entries="@array/text_color"
        android:entryValues="@array/back_color" />

</PreferenceScreen>