<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_open"
        android:icon="@android:drawable/ic_menu_day"
        android:orderInCategory="10"
        app:showAsAction="always|withText"
        android:title="@string/action_open"/>
    <item
        android:id="@+id/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="10"
        app:showAsAction="always|withText"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        app:showAsAction="never"
        android:title="@string/action_settings"/>


</menu>